Adjusting min-height on content-overlay to ensure the footer stays at the bottom
Was only a problem on pages with less content.  Now that extra space is
filled with white space until we get more content.

--- a/wp-content/themes/CustomParallax/style.css
+++ b/wp-content/themes/CustomParallax/style.css
@@ -329,6 +329,7 @@ sizingMethod='scale');
   margin-top: 10px;
   background: #ffffff;
   max-width:1170px;
+  min-height: 700px;
   margin-left: auto;
   margin-right: auto;
   padding: 10px 45px;
